fix button font color in dark mode

--- a/src/containers/contact/Contact.css
+++ b/src/containers/contact/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .dark-mode a {
-  color: white !important;
+  color: white;
 }
 
 .contact-div-main > * {
